@@ -9,10 +9,13 @@ import dev.langchain4j.data.message.ChatMessage;
 import dev.langchain4j.data.message.ChatMessageType;
 import dev.langchain4j.data.message.Content;
 import dev.langchain4j.data.message.ContentType;
+import dev.langchain4j.data.message.CustomMessage;
 import dev.langchain4j.data.message.ImageContent;
 import dev.langchain4j.data.message.TextContent;
 import dev.langchain4j.data.message.UserMessage;
+import dev.langchain4j.model.chat.request.ResponseFormat;
 import dev.langchain4j.model.chat.request.json.JsonObjectSchema;
+import dev.langchain4j.model.chat.request.json.JsonSchemaElementHelper;
 
 import java.util.HashMap;
 import java.util.List;
@@ -76,13 +79,23 @@ class OllamaMessagesUtils {
         }
     }
 
-    static List<ToolExecutionRequest> toToolExecutionRequest(List<ToolCall> toolCalls) {
+    static List<ToolExecutionRequest> toToolExecutionRequests(List<ToolCall> toolCalls) {
         return toolCalls.stream().map(toolCall ->
                         ToolExecutionRequest.builder()
                                 .name(toolCall.getFunction().getName())
                                 .arguments(toJson(toolCall.getFunction().getArguments()))
                                 .build())
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    static String toOllamaResponseFormat(ResponseFormat responseFormat) {
+        if (responseFormat == null || responseFormat == ResponseFormat.TEXT) {
+            return null;
+        } else if (responseFormat == ResponseFormat.JSON && responseFormat.jsonSchema() == null) {
+            return "json";
+        } else {
+            return OllamaJsonUtils.toJson(JsonSchemaElementHelper.toMap(responseFormat.jsonSchema().rootElement()));
+        }
     }
 
     private static Message messagesWithImageSupport(UserMessage userMessage) {
@@ -107,6 +120,12 @@ class OllamaMessagesUtils {
     }
 
     private static Message otherMessages(ChatMessage chatMessage) {
+        if (chatMessage instanceof CustomMessage customMessage) {
+            return Message.builder()
+                    .additionalFields(customMessage.attributes())
+                    .build();
+        }
+
         List<ToolCall> toolCalls = null;
         if (ChatMessageType.AI == chatMessage.type()) {
             AiMessage aiMessage = (AiMessage) chatMessage;
